--- a/package.json
+++ b/package.json
@@ -22,24 +22,25 @@
     "@angular/material": "^5.1.0",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
-    "body-parser": "^1.18.2",
-    "core-js": "^2.4.1",
-    "express": "^4.16.3",
-    "hammerjs": "^2.0.8",
-    "mysql": "^2.15.0",
-    "rxjs": "^5.5.6",
-    "zone.js": "^0.8.20",
     "@angular/platform-server": "^5.2.0",
+    "@angular/router": "^5.2.0",
     "@covalent/core": "1.0.0-rc.4",
     "@covalent/dynamic-forms": "1.0.0-rc.4",
     "@covalent/highlight": "1.0.0-rc.4",
     "@covalent/http": "1.0.0-rc.4",
     "@covalent/markdown": "1.0.0-rc.4",
     "@swimlane/ngx-charts": "^7.0.1",
+    "body-parser": "^1.18.2",
+    "core-js": "^2.4.1",
     "d3": "^4.9.0",
+    "express": "^4.16.3",
+    "hammerjs": "^2.0.8",
     "highlight.js": "9.10.0",
-    "showdown": "1.6.4"
+    "mysql": "^2.15.0",
+    "npm": "^6.0.0",
+    "rxjs": "^5.5.6",
+    "showdown": "1.6.4",
+    "zone.js": "^0.8.20"
   },
   "devDependencies": {
     "@angular/cli": "1.6.6",
