--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "highlight.js": "9.10.0",
     "mysql": "^2.15.0",
     "npm": "^6.0.0",
+    "promise-mysql": "^3.2.1",
     "rxjs": "^5.5.6",
     "showdown": "1.6.4",
     "zone.js": "^0.8.20"
